Name:                paxos
Version:             0.1.0.0
Synopsis:            Implementations of Paxos-related consensus algorithms
-- Description:         
Homepage:            http://github.com/NicolasT/Paxos
License:             LGPL-2.1
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Copyright:           Copyright (c) 2012, Nicolas Trangez
Category:            Network
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:     Network.Paxos.Synod,
                       Network.Paxos.Synod.Proposer,
                       Network.Paxos.Synod.Acceptor,
                       Network.Paxos.Synod.Learner
  Other-Modules:       Network.Paxos.Synod.Action,
                       Network.Paxos.Synod.Types,
                       Network.Paxos.Synod.Messages
  Build-Depends:       base >= 4 && < 5,
                       containers,
                       QuickCheck >= 2,
                       test-framework,
                       test-framework-quickcheck2
  Hs-Source-Dirs:      src
  Ghc-Options:         -Wall -fwarn-incomplete-patterns

Executable synod
  Main-Is:             synod.hs
  Build-Depends:       base >= 4 && < 5,
                       stm,
                       random,
                       paxos
  Hs-Source-Dirs:      bin
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded

Test-Suite tests
  Type:                exitcode-stdio-1.0
  Main-Is:             tests.hs
  Build-Depends:       base >= 4 && < 5,
                       test-framework,
                       paxos
  Hs-Source-Dirs:      bin
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
