Name: paxos
Version: 0.0.1
Synopsis: Implementations of Paxos and similar algorithms
License: LGPL
License-file: LICENSE
Copyright: Copyright (c) 2010 Nicolas Trangez
Author: Nicolas Trangez
Maintainer: Nicolas Trangez <eikke@eikke.com>

Build-Type: Simple
Cabal-Version: >= 1.8

Library
    Exposed-Modules:
      Network.Paxos.Lease
    Build-Depends:
      base > 4 && < 5,
      binary,
      hslogger,
      hslogger-template,
      mtl,
      network

    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2 -funbox-strict-fields

Executable lease
    Main-is: Lease.hs
    Build-Depends:
      base,
      paxos,
      hslogger,
      hslogger-template

    Hs-Source-Dirs: demo
    GHC-Options: -Wall -O2 -funbox-strict-fields
